2006-04-28  Hendrik Tews  <tews@debian>

	* added ocaml_from_SourceLoc

2006-04-28  Hendrik Tews  <tews@penguin.cs.kun.nl>

	* ocaml serialization almost finished: only ocaml_from_SourceLoc
	  is missing
	* added getPtrBase to astgen.cc to extract pointer base type
	* simplified ocaml_from_function
	* treat FakeList pointers correcly
	* new file ocamlhelp.cc as implementation of ocamlhelp.h
	* new files cc_ocaml.* in test to support elsa's enum types
	* added ocaml_from_ functions for all those enum types 
	  (this includes lots of callbacks and huge switches)

	* finish the commit message less hack started on April 24:
	  most of ocaml serialization is done, still missing: functions for
	  basis types, list functions for non-class elements,
	  serialization of enums.
	* added TAGS goal to ast/Makefile.in
	* permit ast files with ``-'' in the name
	* restructured callback name generation in ocaml_node_callback
	* simplified is_cyclic
	* put ocaml helpers in separate file: ocamlhelp.h
	* ocaml serialization (aka converting the ast into an ocaml
	variant type)
	  - all the changes describes in the following are only visible if
	    the ast requests the ocamlVisitor (which switches wantOcaml
	    on)

	  - ocaml serialization can't be done with one of the visitors for
	    two reasons:
	    (1) all the visitors return void (instead of a template T)
	    (2) the post visit methods do not have access to the return
	    values of the post visit methods of the child nodes.

	    I therfore decided to add another tree traversal method
	    "toOcaml" solely for the purpose of ocaml serialization. All
	    toOcaml methods have a parameter ToOcamlData (which is passed
	    down during traversal) that contains a SObjSet<const void *>
	    of ast nodes to detect cycles in the ast.
	    [ I plan to use the ToOcamlData for some statistics as well ]

	    The general approach is as follows: first convert all direct
	    childs into ocaml values, then take these and call a ocaml