@@ -1,3 +1,8 @@
+2006-04-30  Hendrik Tews  <tews@debian>
+
+	* changed list allocation in ..._from_list functions, use
+	  caml_alloc and Store_field now
+
 2006-04-28  Hendrik Tews  <tews@debian>
 
 	* added ocaml_from_SourceLoc
